# data-eng-interview

./: README.md  pyproject.toml  setup.sh  tech_assessment.ipynb
data/: athletes.csv  coaches.csv  medals.csv  teams.csv
